# hackathon-ai-native-book

./: .gitignore  CLAUDE.md  README.md  Subagents.md  chatbot_creator_prompt.md:Zone.Identifier  package.json  pnpm-lock.yaml  structure.md
.claude/agents/: chatbot-creator.md  embedding-expert.md  fastapi-agent.md  fullstack-engineer.md  textbook-writer.md  vla-architect.md
.claude/commands/: write-spec.md
.claude/skills/: SKILL.md  clarify-writing.md  spec-writing.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
prompts/: 4-vla.md  6-assessment.md  capstone.md  glossary.md  hardware-requirements.md  overview.md  weekly-breakdown.md
prompts/chapter-1/: response.md
prompts/chapter-2/: prompts.md
prompts/chapter-3/: prompts.md
prompts/chapter-4/: prompts.md
prompts/chapter-5/: prompts.md
prompts/chatbot/: clarification.md  plan.md  specification.md
prompts/constitution-prompt/: prompt.md  response.md
prompts/reusable-skills/: 1-creating-skill.md
prompts/subagents/: module-4-vla.md
server/: README.md  agent.py  config.py  create.py  main.py  modals.py  pyproject.toml  ret.py  schema.py
server/embedding/: __init__.py  main.py
server/schema/: __init__.py  auth.py  chat.py
specs/001-3-nvidia-isaac/: checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-assessments/: spec.md
specs/001-chatbot-auth-fix/: plan.md  spec.md  tasks.md
textbook/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
(+113 files in other folders)
