[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "cohere>=5.20.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.2",
    "openai-agents>=0.6.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "trafilatura>=2.0.0",
]
